Work on favicon
reuploaded favicon to the root. logout.html added space between heading
and nav bar and removed messages link at the bottom of the page.
postdetail added pk to before post.pk for commentdelete.
commentdelete added space and  moved the closing form tag.
base.htm

--- a/templates/postdetail.html
+++ b/templates/postdetail.html
@@ -44,7 +44,7 @@
                     <p> Leave a comment or like this post.</p>
                     <a href="{% url 'commentadd' post.pk %}" class="commentadd-link">Add Comment </a>&nbsp;
                    
-                    <a href="{% url 'commentdelete' post.pk %}" class="commentdelete-link">Delete Comment </a>&nbsp
+                    <a href="{% url 'commentdelete' pk=post.pk %}" class="commentdelete-link">Delete Comment </a>&nbsp
                    
                     <hr class="hr-style">
                  
@@ -58,7 +58,10 @@
                              {{ comment.mainbody | safe }}
                              <br>
                              <br>
-
+                           
+                   
+                             <a href="{% url 'commentdelete' pk=post.pk %}" class="commentdelete-link">Delete Comment </a>&nbsp
+                             <hr>
                    </div>
                      {% endfor %}   
                      {% endif %}
