--- a/templates/postupdate.html
+++ b/templates/postupdate.html
@@ -4,34 +4,27 @@
 <br>
 <br>
 
-  <h3 class="text-center update-title">Update Post</h3>
+<h3 class="text-center update-title">Update Post</h3>
 
-  <div class="container">
-    <div class="center-form col-md-6">
+<div class="container">
+  <div class="center-form col-md-6">
 
-  {% if user.is_authenticated %}
+    {% if user.is_authenticated %}
     {% if user.id == post.contributor.id %}
 <br>
+      <form method="POST" enctype="multipart/form-data" >
 
+        {% csrf_token %}
+        {{ form.as_p }}
 
-  <form method="POST" enctype="multipart/form-data" >
+        <input type="submit" value="Submit" class="create-submit">
+        <a href="{% url 'postread' %}"> </a>
+        {% endif %}
+        {% else %}
+        Please Login to update post.  
 
-    {% csrf_token %}
-    {{ form.as_p }}
-
-  <input type="submit" value="Submit" class="create-submit"/>
-  <a href="{% url 'postread' %}"> 
-    {% endif %}
-    {% else %}
-  Please Login to update post.  
-
- {% endif %}
-  </form>
-    </div>
-
-
- 
-    
-
-
-  {% endblock %}
+        {% endif %}
+      </form>
+  </div>
+</div>
+{% endblock %}
